# xmss-library

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.reuse/: dep5
cmake/: check_extension_static_assert.c  check_pragma_clang_optimize.c  check_pragma_gcc_optimize.c  check_pragma_optimize.c  check_static_assert.c  compiler_options.cmake
include/: CMakeLists.txt  compat.h  errors.h  generic_digest.h  opaque_structures.h  override_sha256_generic.h  override_sha256_internal.h  override_shake256_256_generic.h  override_shake256_256_internal.h  signing.h  structures.h  types.h  verification.h  version.h  xmss_config.in.h
src/: CMakeLists.txt  compat_stdatomic.h  config.in.h  endianness.h  errors.c  fault_detection_helpers.h  generic_xmss_hashes.h  index_permutation.c  index_permutation.h  libxmss.c  libxmss.def  libxmss.h  libxmss_no_signing.def  private.h  rand_hash.c  rand_hash.h  sha256_generic_xmss_hashes.h  sha256_internal_H0.c  sha256_internal_H0.h  sha256_internal_default.c  sha256_internal_xmss_hashes.c  sha256_internal_xmss_hashes.h  sha256_xmss_hashes.c  sha256_xmss_hashes.h  shake256_256_generic_xmss_hashes.h  shake256_256_internal_default.c  shake256_256_internal_xmss_hashes.c  shake256_256_internal_xmss_hashes.h  shake256_256_xmss_hashes.c  shake256_256_xmss_hashes.h  signing.c  signing_private.h  utils.c  utils.h  verification.c  version.c  version.in.rc  wotsp.c  wotsp.h  wotsp_private.h  (+13 more)
tests/: CMakeLists.txt  nist-test-vectors.c  nist-test-vectors.h  reference-digest.inc  sha256-kat.c  shake256_256-kat.c  test-aarch64-override_sha256_internal.c  test-blob-confusion.c  test-build_type.c  test-build_type.h  test-chain.c  test-completeness.c  test-debug.c  test-endianness.c  test-ltree.c  test-override_sha256_generic.c  test-override_sha256_internal.c  test-override_shake256_256_generic.c  test-rand_hash.c  test-release.c  test-sha256_xmss_hashes.c  test-shake256_256_xmss_hashes.c  test-static_assert.c  test-structures.c  test-version.c  test-wotsp.c  test-xmss_context_initialize.c  test-xmss_generate_private_key.c  test-xmss_generate_public_key.c  test-xmss_hashes.c  test-xmss_hashes.h  test-xmss_hashes.inc  test-xmss_sign_verify.c  test-xmss_tree_hash.c  test-xmss_zeroize.c
tests/cmake/: test_static_assert.c
tests/external-test-vectors/: README.md  xmss-reference-vectors.txt  xmss-reference-vectors.txt.license
tests/external-test-vectors/shakebytetestvectors/: SHAKE256ShortMsg.rsp.license
